--- a/Index.html
+++ b/Index.html
@@ -4,16 +4,16 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact</title>
+<title>index</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Contact;
-		--web-view-id: Contact;
+		--web-view-name: index;
+		--web-view-id: index;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Contact;
+		--web-view-ids: index;
 	}
 	* {
 		margin: 0;
@@ -21,14 +21,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Contact {
+	#index {
 		position: absolute;
 		width: 1920px;
 		height: 1080px;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
-		--web-view-name: Contact;
-		--web-view-id: Contact;
+		--web-view-name: index;
+		--web-view-id: index;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
@@ -42,19 +42,13 @@
 		}
 	
 	}
-	#Contact_j {
-		left: 379px;
-		top: 334px;
+	#Mask_Group_1 {
 		position: absolute;
+		width: 1012.72px;
+		height: 78.794px;
+		left: 454px;
+		top: 351.576px;
 		overflow: visible;
-		width: 156px;
-		white-space: nowrap;
-		text-align: center;
-		font-family: Arial Rounded MT;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 40px;
-		color: rgba(0,0,0,1);
 	}
 	#Page_Bar {
 		position: absolute;
@@ -160,13 +154,17 @@
 		font-size: 40px;
 		color: rgba(255,255,255,1);
 	}
-	#Contact_r {
+	#Contact {
 		left: 628px;
 		top: 15px;
 		position: absolute;
 		overflow: visible;
 		width: 156px;
 		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Contact.html;
+		cursor: pointer;
 		text-align: center;
 		font-family: Arial Rounded MT;
 		font-style: normal;
@@ -182,7 +180,7 @@
 		top: 0px;
 		overflow: visible;
 	}
-	#Ellipse_1 {
+	#Ellipse_1_ {
 		fill: rgba(0,0,0,1);
 		stroke: rgba(112,112,112,1);
 		stroke-width: 1px;
@@ -190,18 +188,168 @@
 		stroke-linecap: butt;
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
-		--web-animation: fadein 0.30000001192092896s ease-out;
-		--web-action-type: page;
-		--web-action-target: index.html;
-		cursor: pointer;
 	}
-	.Ellipse_1 {
+	.Ellipse_1_ {
 		position: absolute;
 		overflow: visible;
 		width: 75px;
 		height: 75px;
 		left: 0px;
 		top: 0px;
+	}
+	#Page_Bar_Index {
+		position: absolute;
+		width: 950px;
+		height: 75px;
+		left: 55px;
+		top: 55px;
+		overflow: visible;
+	}
+	#Nav_v {
+		position: absolute;
+		width: 830px;
+		height: 75px;
+		left: 120px;
+		top: 0px;
+		overflow: visible;
+	}
+	#Rectangle_1_w {
+		fill: rgba(255,119,119,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_1_w {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+	}
+	#Rectangle_2_x {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_2_x {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 580px;
+		top: 0px;
+	}
+	#Rectangle_4_y {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_4_y {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 290px;
+		top: 0px;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: About_Me.html;
+		cursor: pointer;
+	}
+	#Projects_z {
+		left: 44px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 163px;
+		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Projects.html;
+		cursor: pointer;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(0,0,0,1);
+	}
+	#About_Me_ {
+		left: 323px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 185px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Contact_ {
+		left: 628px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 156px;
+		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Contact.html;
+		cursor: pointer;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Home_ {
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+		overflow: visible;
+	}
+	#Ellipse_1_ {
+		fill: rgba(0,0,0,1);
+		stroke: rgba(112,112,112,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Ellipse_1_ {
+		position: absolute;
+		overflow: visible;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+	}
+	#Mask_Group_2 {
+		position: absolute;
+		width: 300px;
+		height: 75px;
+		left: 810px;
+		top: 540px;
+		overflow: visible;
 	}
 </style>
 <script id="applicationScript">
@@ -3116,10 +3264,10 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Contact">
-	<div id="Contact_j">
-		<span>Contact</span>
-	</div>
+<div id="index">
+	<img id="Mask_Group_1" src="Mask_Group_1.png" srcset="Mask_Group_1.png 1x, Mask_Group_1@2x.png 2x">
+		
+	</svg>
 	<div id="Page_Bar" class="Page_Bar">
 		<div id="Nav" class="Nav">
 			<svg class="Rectangle_1">
@@ -3140,17 +3288,51 @@ window.application = new Application();
 			<div id="About_Me">
 				<span>About Me</span>
 			</div>
-			<div id="Contact_r">
+			<div onclick="application.goToTargetView(event)" id="Contact">
 				<span>Contact</span>
 			</div>
 		</div>
 		<div id="Home" class="Home">
-			<svg class="Ellipse_1">
-				<ellipse onclick="application.goToTargetView(event)" id="Ellipse_1" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
+			<svg class="Ellipse_1_">
+				<ellipse id="Ellipse_1_" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
 				</ellipse>
 			</svg>
 		</div>
 	</div>
+	<div id="Page_Bar_Index" class="Page_Bar_Index">
+		<div id="Nav_v" class="Nav">
+			<svg class="Rectangle_1_w">
+				<rect id="Rectangle_1_w" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_2_x">
+				<rect id="Rectangle_2_x" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_4_y">
+				<rect onclick="application.goToTargetView(event)" id="Rectangle_4_y" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<div onclick="application.goToTargetView(event)" id="Projects_z">
+				<span>Projects</span>
+			</div>
+			<div id="About_Me_">
+				<span>About Me</span>
+			</div>
+			<div onclick="application.goToTargetView(event)" id="Contact_">
+				<span>Contact</span>
+			</div>
+		</div>
+		<div id="Home_" class="Home">
+			<svg class="Ellipse_1_">
+				<ellipse id="Ellipse_1_" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
+				</ellipse>
+			</svg>
+		</div>
+	</div>
+	<img id="Mask_Group_2" src="Mask_Group_2.png" srcset="Mask_Group_2.png 1x, Mask_Group_2@2x.png 2x">
+		
+	</svg>
 </div>
 </body>
 </html>
