--- a/Projects.html
+++ b/Projects.html
@@ -32,6 +32,16 @@
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
+	@keyframes fadein {
+	
+		0% {
+			opacity: 0;
+		}
+		100% {
+			opacity: 1;
+		}
+	
+	}
 	#Projects_j {
 		left: 389px;
 		top: 318px;
@@ -45,6 +55,300 @@
 		font-weight: bold;
 		font-size: 40px;
 		color: rgba(0,0,0,1);
+	}
+	#Page_Bar_u {
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		left: 55px;
+		top: 55px;
+		overflow: visible;
+	}
+	#Nav_v {
+		position: absolute;
+		width: 830px;
+		height: 75px;
+		left: -755px;
+		top: 0px;
+		display: none;
+		overflow: visible;
+	}
+	#Rectangle_1_w {
+		fill: rgba(255,119,119,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_1_w {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+	}
+	#Rectangle_2_x {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_2_x {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 580px;
+		top: 0px;
+	}
+	#Rectangle_4_y {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_4_y {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 290px;
+		top: 0px;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: About_Me.html;
+		cursor: pointer;
+	}
+	#Projects_z {
+		left: 44px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 163px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(0,0,0,1);
+	}
+	#About_Me_ {
+		left: 323px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 185px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Contact_ {
+		left: 628px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 156px;
+		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Contact.html;
+		cursor: pointer;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Home_ {
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+		overflow: visible;
+	}
+	#Ellipse_1_ {
+		fill: rgba(0,0,0,1);
+		stroke: rgba(112,112,112,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: index.html;
+		cursor: pointer;
+	}
+	.Ellipse_1_ {
+		position: absolute;
+		overflow: visible;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+	}
+	#Page_Bar_u {
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		left: 55px;
+		top: 55px;
+		overflow: visible;
+	}
+	#Nav_v {
+		position: absolute;
+		width: 830px;
+		height: 75px;
+		left: -755px;
+		top: 0px;
+		display: none;
+		overflow: visible;
+	}
+	#Rectangle_1_w {
+		fill: rgba(255,119,119,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_1_w {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+	}
+	#Rectangle_2_x {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_2_x {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 580px;
+		top: 0px;
+	}
+	#Rectangle_4_y {
+		fill: rgba(68,68,68,1);
+		stroke: rgba(68,68,68,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+	}
+	.Rectangle_4_y {
+		position: absolute;
+		overflow: visible;
+		width: 250px;
+		height: 75px;
+		left: 290px;
+		top: 0px;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: About_Me.html;
+		cursor: pointer;
+	}
+	#Projects_z {
+		left: 44px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 163px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(0,0,0,1);
+	}
+	#About_Me_ {
+		left: 323px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 185px;
+		white-space: nowrap;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Contact_ {
+		left: 628px;
+		top: 15px;
+		position: absolute;
+		overflow: visible;
+		width: 156px;
+		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Contact.html;
+		cursor: pointer;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(255,255,255,1);
+	}
+	#Home_ {
+		position: absolute;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
+		overflow: visible;
+	}
+	#Ellipse_1_ {
+		fill: rgba(0,0,0,1);
+		stroke: rgba(112,112,112,1);
+		stroke-width: 1px;
+		stroke-linejoin: miter;
+		stroke-linecap: butt;
+		stroke-miterlimit: 4;
+		shape-rendering: auto;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: index.html;
+		cursor: pointer;
+	}
+	.Ellipse_1_ {
+		position: absolute;
+		overflow: visible;
+		width: 75px;
+		height: 75px;
+		left: 0px;
+		top: 0px;
 	}
 </style>
 <script id="applicationScript">
@@ -2962,6 +3266,68 @@ window.application = new Application();
 <div id="Projects">
 	<div id="Projects_j">
 		<span>Projects</span>
+	</div>
+	<div id="Page_Bar_u" class="Page_Bar">
+		<div id="Nav_v" class="Nav">
+			<svg class="Rectangle_1_w">
+				<rect id="Rectangle_1_w" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_2_x">
+				<rect id="Rectangle_2_x" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_4_y">
+				<rect onclick="application.goToTargetView(event)" id="Rectangle_4_y" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<div id="Projects_z">
+				<span>Projects</span>
+			</div>
+			<div id="About_Me_">
+				<span>About Me</span>
+			</div>
+			<div onclick="application.goToTargetView(event)" id="Contact_">
+				<span>Contact</span>
+			</div>
+		</div>
+		<div id="Home_" class="Home">
+			<svg class="Ellipse_1_">
+				<ellipse onclick="application.goToTargetView(event)" id="Ellipse_1_" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
+				</ellipse>
+			</svg>
+		</div>
+	</div>
+	<div id="Page_Bar_u" class="Page_Bar">
+		<div id="Nav_v" class="Nav">
+			<svg class="Rectangle_1_w">
+				<rect id="Rectangle_1_w" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_2_x">
+				<rect id="Rectangle_2_x" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<svg class="Rectangle_4_y">
+				<rect onclick="application.goToTargetView(event)" id="Rectangle_4_y" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+				</rect>
+			</svg>
+			<div id="Projects_z">
+				<span>Projects</span>
+			</div>
+			<div id="About_Me_">
+				<span>About Me</span>
+			</div>
+			<div onclick="application.goToTargetView(event)" id="Contact_">
+				<span>Contact</span>
+			</div>
+		</div>
+		<div id="Home_" class="Home">
+			<svg class="Ellipse_1_">
+				<ellipse onclick="application.goToTargetView(event)" id="Ellipse_1_" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
+				</ellipse>
+			</svg>
+		</div>
 	</div>
 </div>
 </body>
