--- a/Web_1920___1.html
+++ b/Web_1920___1.html
@@ -4,16 +4,16 @@
 <meta charset="utf-8"/>
 <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Contact</title>
+<title>Web 1920 – 1</title>
 <style id="applicationStylesheet" type="text/css">
 	.mediaViewInfo {
-		--web-view-name: Contact;
-		--web-view-id: Contact;
+		--web-view-name: Web 1920 – 1;
+		--web-view-id: Web_1920__1;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
 	:root {
-		--web-view-ids: Contact;
+		--web-view-ids: Web_1920__1;
 	}
 	* {
 		margin: 0;
@@ -21,14 +21,14 @@
 		box-sizing: border-box;
 		border: none;
 	}
-	#Contact {
+	#Web_1920__1 {
 		position: absolute;
 		width: 1920px;
 		height: 1080px;
 		background-color: rgba(255,255,255,1);
 		overflow: hidden;
-		--web-view-name: Contact;
-		--web-view-id: Contact;
+		--web-view-name: Web 1920 – 1;
+		--web-view-id: Web_1920__1;
 		--web-scale-on-resize: true;
 		--web-enable-deep-linking: true;
 	}
@@ -41,37 +41,6 @@
 			opacity: 1;
 		}
 	
-	}
-	#Contact_j {
-		left: 379px;
-		top: 334px;
-		position: absolute;
-		overflow: visible;
-		width: 156px;
-		white-space: nowrap;
-		text-align: center;
-		font-family: Arial Rounded MT;
-		font-style: normal;
-		font-weight: bold;
-		font-size: 40px;
-		color: rgba(0,0,0,1);
-	}
-	#Page_Bar {
-		position: absolute;
-		width: 75px;
-		height: 75px;
-		left: 55px;
-		top: 55px;
-		overflow: visible;
-	}
-	#Nav {
-		position: absolute;
-		width: 830px;
-		height: 75px;
-		left: -755px;
-		top: 0px;
-		display: none;
-		overflow: visible;
 	}
 	#Rectangle_1 {
 		fill: rgba(255,119,119,1);
@@ -87,8 +56,8 @@
 		overflow: visible;
 		width: 250px;
 		height: 75px;
-		left: 0px;
-		top: 0px;
+		left: 188px;
+		top: 65px;
 	}
 	#Rectangle_2 {
 		fill: rgba(68,68,68,1);
@@ -104,8 +73,8 @@
 		overflow: visible;
 		width: 250px;
 		height: 75px;
-		left: 580px;
-		top: 0px;
+		left: 768px;
+		top: 65px;
 	}
 	#Rectangle_4 {
 		fill: rgba(68,68,68,1);
@@ -121,23 +90,19 @@
 		overflow: visible;
 		width: 250px;
 		height: 75px;
-		left: 290px;
-		top: 0px;
-		--web-animation: fadein 0.30000001192092896s ease-out;
-		--web-action-type: page;
-		--web-action-target: About_Me.html;
-		cursor: pointer;
+		left: 478px;
+		top: 65px;
 	}
 	#Projects {
-		left: 44px;
-		top: 15px;
+		left: 232px;
+		top: 80px;
 		position: absolute;
 		overflow: visible;
 		width: 163px;
 		white-space: nowrap;
 		--web-animation: fadein 0.30000001192092896s ease-out;
 		--web-action-type: page;
-		--web-action-target: Projects.html;
+		--web-action-target: Artboard___1.html;
 		cursor: pointer;
 		text-align: center;
 		font-family: Arial Rounded MT;
@@ -147,8 +112,8 @@
 		color: rgba(0,0,0,1);
 	}
 	#About_Me {
-		left: 323px;
-		top: 15px;
+		left: 511px;
+		top: 80px;
 		position: absolute;
 		overflow: visible;
 		width: 185px;
@@ -160,13 +125,17 @@
 		font-size: 40px;
 		color: rgba(255,255,255,1);
 	}
-	#Contact_r {
-		left: 628px;
-		top: 15px;
+	#Contact {
+		left: 816px;
+		top: 80px;
 		position: absolute;
 		overflow: visible;
 		width: 156px;
 		white-space: nowrap;
+		--web-animation: fadein 0.30000001192092896s ease-out;
+		--web-action-type: page;
+		--web-action-target: Web_1920___2.html;
+		cursor: pointer;
 		text-align: center;
 		font-family: Arial Rounded MT;
 		font-style: normal;
@@ -174,34 +143,36 @@
 		font-size: 40px;
 		color: rgba(255,255,255,1);
 	}
-	#Home {
-		position: absolute;
-		width: 75px;
-		height: 75px;
-		left: 0px;
-		top: 0px;
-		overflow: visible;
-	}
 	#Ellipse_1 {
-		fill: rgba(0,0,0,1);
+		fill: rgba(23,49,136,1);
 		stroke: rgba(112,112,112,1);
 		stroke-width: 1px;
 		stroke-linejoin: miter;
 		stroke-linecap: butt;
 		stroke-miterlimit: 4;
 		shape-rendering: auto;
-		--web-animation: fadein 0.30000001192092896s ease-out;
-		--web-action-type: page;
-		--web-action-target: index.html;
-		cursor: pointer;
 	}
 	.Ellipse_1 {
 		position: absolute;
 		overflow: visible;
 		width: 75px;
 		height: 75px;
-		left: 0px;
-		top: 0px;
+		left: 57px;
+		top: 65px;
+	}
+	#Hello_I_am_Xavier_Millan {
+		left: 445px;
+		top: 517px;
+		position: absolute;
+		overflow: visible;
+		width: 1031px;
+		height: 46px;
+		text-align: center;
+		font-family: Arial Rounded MT;
+		font-style: normal;
+		font-weight: bold;
+		font-size: 40px;
+		color: rgba(0,0,0,1);
 	}
 </style>
 <script id="applicationScript">
@@ -3116,40 +3087,34 @@ window.application = new Application();
 </script>
 </head>
 <body>
-<div id="Contact">
-	<div id="Contact_j">
+<div id="Web_1920__1">
+	<svg class="Rectangle_1">
+		<rect id="Rectangle_1" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+		</rect>
+	</svg>
+	<svg class="Rectangle_2">
+		<rect id="Rectangle_2" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+		</rect>
+	</svg>
+	<svg class="Rectangle_4">
+		<rect id="Rectangle_4" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
+		</rect>
+	</svg>
+	<div onclick="application.goToTargetView(event)" id="Projects">
+		<span>Projects</span>
+	</div>
+	<div id="About_Me">
+		<span>About Me</span>
+	</div>
+	<div onclick="application.goToTargetView(event)" id="Contact">
 		<span>Contact</span>
 	</div>
-	<div id="Page_Bar" class="Page_Bar">
-		<div id="Nav" class="Nav">
-			<svg class="Rectangle_1">
-				<rect id="Rectangle_1" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
-				</rect>
-			</svg>
-			<svg class="Rectangle_2">
-				<rect id="Rectangle_2" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
-				</rect>
-			</svg>
-			<svg class="Rectangle_4">
-				<rect onclick="application.goToTargetView(event)" id="Rectangle_4" rx="37.5" ry="37.5" x="0" y="0" width="250" height="75">
-				</rect>
-			</svg>
-			<div onclick="application.goToTargetView(event)" id="Projects">
-				<span>Projects</span>
-			</div>
-			<div id="About_Me">
-				<span>About Me</span>
-			</div>
-			<div id="Contact_r">
-				<span>Contact</span>
-			</div>
-		</div>
-		<div id="Home" class="Home">
-			<svg class="Ellipse_1">
-				<ellipse onclick="application.goToTargetView(event)" id="Ellipse_1" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
-				</ellipse>
-			</svg>
-		</div>
+	<svg class="Ellipse_1">
+		<ellipse id="Ellipse_1" rx="37.5" ry="37.5" cx="37.5" cy="37.5">
+		</ellipse>
+	</svg>
+	<div id="Hello_I_am_Xavier_Millan">
+		<span>Hello, I am Xavier Millan</span>
 	</div>
 </div>
 </body>
